add default mode and set widgets to NULL

--- a/inst/skeleton/index.Rmd
+++ b/inst/skeleton/index.Rmd
@@ -3,7 +3,8 @@ title    : Title
 substitle: Subtitle
 author   : Author
 job      : Job
-widgets  : [mathjax]
+widgets  : []
+mode     : selfcontained
 ---
 
 ## Slide 1
