--- a/inst/skeleton/index.Rmd
+++ b/inst/skeleton/index.Rmd
@@ -1,10 +1,13 @@
 ---
-title    : Title 
-substitle: Subtitle
-author   : Author
-job      : Job
-widgets  : []
-mode     : selfcontained
+title       : 
+substitle   : 
+author      : 
+job         : 
+framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
+highlighter : highlight.js  # {highlight.js, prettify, highlight}
+hitheme     : tomorrow      # 
+widgets     : []            # {mathjax, quiz, bootstrap}
+mode        : selfcontained # {standalone, draft}
 ---
 
 ## Slide 1
