modify index.Rmd in skeleton

--- a/inst/skeleton/index.Rmd
+++ b/inst/skeleton/index.Rmd
@@ -10,9 +10,11 @@ widgets     : []            # {mathjax, quiz, bootstrap}
 mode        : selfcontained # {standalone, draft}
 ---
 
-## Slide 1
+## Read-And-Delete
 
-Use an empty line followed by three dashes to separate slides!
+1. Edit YAML front matter
+2. Write using R Markdown
+3. Use an empty line followed by three dashes to separate slides!
 
 --- .class #id 
 
