custom knit function for rstudio

--- a/inst/skeleton/index.Rmd
+++ b/inst/skeleton/index.Rmd
@@ -8,6 +8,7 @@ highlighter : highlight.js  # {highlight.js, prettify, highlight}
 hitheme     : tomorrow      # 
 widgets     : []            # {mathjax, quiz, bootstrap}
 mode        : selfcontained # {standalone, draft}
+knit        : slidify::knit2slides
 ---
 
 ## Read-And-Delete
